# AISE

./: CMakeLists.txt  Readme  alloc.c  alloc.h  main.c  test  test.c
test/: CMakeLists.txt  main.c  my_alloc.c  my_alloc.h  resultoftest.txt  sys_alloc  sys_alloc.c
